--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harpreet Dosanjh Login UI Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="login-box">
+            <h2>Login</h2>
+            <input type="text" placeholder="Username" class="input-field" />
+            <input type="password" placeholder="Password" class="input-field" />
+            <button class="login-button">Login</button>
+        </div>
+    </div>
 </body>
 </html>
