--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div class="centered-content">
         <div class="login-box">
+            <img src="images/bobcat-icon.png" alt="Logo" class="login-logo">
+            
             <form method="post">
                 <p>
                     <input type="text" name="username" placeholder="Username" />
